sets up web authn

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@magic-ext/oauth": "^2.1.1",
+    "@magic-ext/webauthn": "^2.1.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "magic-sdk": "^8.1.1",
